--- a/Odin/Content/Home/home.css
+++ b/Odin/Content/Home/home.css
@@ -1,16 +1,4 @@
-﻿@font-face {
-  font-family: OpenSansLight;
-  src: url("~/Fonts/OpenSans-Light.ttf"); }
-
-@font-face {
-  font-family: OpenSansRegular;
-  src: url("~/Fonts/OpenSans-Regular.ttf"); }
-
-@font-face {
-  font-family: OpenSansLightItalic;
-  src: url(~/Fonts/OpenSans-LightItalic.ttf); }
-
-body {
+﻿body {
   padding: 0px; }
 
 div#main div#caption {
@@ -40,60 +28,84 @@ div#main div#icons {
   float: right;
   width: 48%;
   height: 118px;
-  margin-right: 5px;
-  padding-top: 20px;
+  margin-right: 3px;
+  padding-top: 30px;
   vertical-align: top;
   display: inline-block; }
   div#main div#icons div {
     float: right;
     display: inline-block; }
+    div#main div#icons div.icons_notify {
+      font-size: small;
+      color: darkgreen;
+      position: relative;
+      font-weight: bold;
+      display: inline-block;
+      width: 10px;
+      text-align: center; }
+      div#main div#icons div.icons_notify.icons_notify_messages {
+        top: 6px;
+        left: -45px; }
+      div#main div#icons div.icons_notify.icons_notify_alerts {
+        top: 6px;
+        left: -145px; }
+      div#main div#icons div.icons_notify.icons_notify_appts {
+        top: 6px;
+        left: -188px; }
     div#main div#icons div img {
       float: right;
       width: 40px;
-      margin: 18px; }
+      margin: 8px; }
 
 div#main div#list {
   height: auto;
   padding-bottom: 45px;
   border-top: 1px solid #979797; }
   div#main div#list div#search {
-    margin: 20px 0px 60px 47px; }
+    height: 60px;
+    padding-top: 15px;
+    padding-left: 43px;
+    background-color: #FAFAFA; }
     div#main div#list div#search input {
       width: 300px;
       max-width: none; }
     div#main div#list div#search button {
       width: 90px;
       color: white;
+      height: 30px;
+      border: none;
       margin-left: 15px;
       background-color: #48AD48; }
+  div#main div#list img.arrow {
+    cursor: cell; }
+  div#main div#list img.expand {
+    cursor: zoom-in; }
+  div#main div#list img.collapse {
+    cursor: zoom-out; }
+  div#main div#list img.noinit {
+    display: none; }
   div#main div#list th {
     border: none;
     padding-bottom: 16px; }
-    div#main div#list th.selected > span.arrow_down {
-      border: 0.12em solid #333; }
     div#main div#list th.first {
       padding-left: 73px; }
-    div#main div#list th.second {
-      padding-left: 1px; }
     div#main div#list th.third {
-      padding-left: 58px; }
+      padding-left: 55px; }
     div#main div#list th.fourth {
-      padding-left: 35px; }
+      padding-left: 28px; }
     div#main div#list th.fifth {
-      padding-left: 29px; }
+      padding-left: 23px; }
     div#main div#list th.sixth {
-      padding-left: 48px; }
+      padding-left: 41px; }
     div#main div#list th.seventh {
-      padding-left: 10px; }
-      div#main div#list th.seventh > span {
-        left: 1px; }
+      padding-left: 7px; }
   div#main div#list td {
     border: none;
     white-space: nowrap;
     vertical-align: top; }
     div#main div#list td div.actlist-item-hdr {
       display: inline-block;
-      width: 30%; }
+      width: 30px; }
       div#main div#list td div.actlist-item-hdr a {
         top: -10px;
         color: #6C6E70;
@@ -102,7 +114,7 @@ div#main div#list {
         text-decoration: underline;
         font-family: OpenSansRegular; }
       div#main div#list td div.actlist-item-hdr:first-of-type {
-        width: auto;
+        width: 22px;
         margin-top: 5px;
         vertical-align: top; }
       div#main div#list td div.actlist-item-hdr:nth-child(2) a {
@@ -110,10 +122,20 @@ div#main div#list {
       div#main div#list td div.actlist-item-hdr img {
         width: 20px; }
     div#main div#list td div.actlist-item-blk {
+      display: none;
       margin-left: 20px; }
     div#main div#list td img {
-      width: 40px;
-      padding-top: 5px; }
+      width: 40px; }
+    div#main div#list td div.notify-count {
+      font-size: small;
+      color: darkgreen;
+      position: relative;
+      left: -17px;
+      top: -7px;
+      font-weight: bold;
+      display: inline-block;
+      width: 10px;
+      text-align: center; }
     div#main div#list td p.Callout, div#main div#list td span.Callout {
       color: #31A4DD;
       margin-bottom: 0; }
@@ -143,12 +165,15 @@ div#main div#list {
 @media screen and (min-width: 800px) and (max-width: 992px) {
   div#main table.desktop {
     display: none; }
+  div#main div#icons div.icons_notify.icons_notify_messages {
+    top: 6px;
+    left: -44px; }
   div#main th.second {
     padding-left: 29px !important; }
   div#main th.fourth {
-    padding-left: 3px !important; }
+    padding-left: 0px !important; }
   div#main th.fifth {
-    padding-left: 10px !important; }
+    padding-left: 9px !important; }
   div#main td div.actlist-item-hdr {
     display: block !important; }
   div#main td div.actlist-item-blk {
@@ -180,13 +205,23 @@ div#main div#list {
     padding-top: 0px;
     float: none !important;
     width: 97% !important;
-    display: block !important; }
+    display: block !important;
+    margin-bottom: 16px; }
     div#main div#icons div {
       float: none !important; }
+  div#main div#icons div.icons_notify.icons_notify_messages {
+    top: -32px;
+    left: 239px; }
+  div#main div#icons div.icons_notify.icons_notify_alerts {
+    top: -32px;
+    left: 117px; }
+  div#main div#icons div.icons_notify.icons_notify_appts {
+    top: -32px;
+    left: 50px; }
   div#main th.second {
     padding-left: 54px !important; }
   div#main th.third {
-    padding-left: 10px !important; }
+    padding-left: 9px !important; }
   div#main td span {
     font-size: 14px;
     font-family: OpenSansLightItalic; }
@@ -220,7 +255,7 @@ div#main div#list {
   div#main th.second {
     padding-left: 54px !important; }
   div#main th.third {
-    padding-left: 10px !important; }
+    padding-left: 9px !important; }
   div#main td span {
     font-size: 14px;
     font-family: OpenSansLightItalic; }
@@ -258,7 +293,7 @@ div#main div#list {
   div#main th.second {
     padding-left: 54px !important; }
   div#main th.third {
-    padding-left: 10px !important; }
+    padding-left: 9px !important; }
   div#main td span {
     font-size: 14px;
     font-family: OpenSansLightItalic; }
@@ -272,55 +307,4 @@ div#main div#list {
       width: 230px !important; }
     div#main div#search button {
       margin-left: 0px !important; } }
-
-div#main .arrow_up {
-  display: inline-block;
-  width: 1.4em;
-  height: 1.4em;
-  border: 0.1em solid #333;
-  border-radius: 50%;
-  margin-right: 0.75em;
-  position: relative;
-  top: -0.5em; }
-
-div#main .arrow_up:after {
-  content: '';
-  display: inline-block;
-  margin-top: 0.7em;
-  margin-left: 0.3em;
-  width: 0.5em;
-  height: 0.5em;
-  border-top: 0.1em solid #333;
-  border-right: 0.1em solid #333;
-  -moz-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  position: relative;
-  top: -0.2em; }
-
-div#main .arrow_down {
-  display: inline-block;
-  width: 1.4em;
-  height: 1.4em;
-  border: 0.1em solid #333;
-  border-radius: 50%;
-  margin-right: 0.75em;
-  position: relative;
-  top: -0.5em; }
-
-div#main .arrow_down:after {
-  content: '';
-  display: inline-block;
-  position: relative;
-  top: -0.2em;
-  margin-left: 0.4em;
-  width: 0.5em;
-  height: 0.5em;
-  border-top: 0.1em solid #333;
-  border-right: 0.1em solid #333;
-  -moz-transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-  transform: rotate(135deg);
-  position: relative;
-  top: -0.5em; }
 
