--- a/Odin/Views/Shared/_Common.cshtml
+++ b/Odin/Views/Shared/_Common.cshtml
@@ -6,8 +6,7 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
-</head>
+ </head>
 <body>
     <div class="container body-content">
         <div id="main">
@@ -17,11 +16,20 @@
                 <p>Odin</p>
             </div>
             <div id="icons">
+                <div class="icons_notify icons_notify_messages">
+                    <span>10</span>
+                </div>
+                <div class="icons_notify icons_notify_alerts">
+                    <span>1</span>
+                </div>
+                <div class="icons_notify icons_notify_appts">
+                    <span>1</span>
+                </div>
                 <div>
-                    <img src="~/Content/Images/icn_message_2.png" />
+                    <img src="~/Content/Images/icn_chat_1.png">
                     <img src="~/Content/Images/icn_profile.png" />
-                    <img src="~/Content/Images/icn_notification_2.png" />
-                    <img src="~/Content/Images/icn_calender_2.png" />
+                    <img src="~/Content/Images/icn_note_1.png" />
+                    <img src="~/Content/Images/icn_cal_1.png" />
                 </div>
             </div>
             @RenderBody()
