Search functionality now working

--- a/Odin/Views/Home/Index.cshtml
+++ b/Odin/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div id="list">
     <div id="search">
-            <input /><button>Search</button>
+            <input id="searchbox"/><button>Search</button>
         </div>
     <div>
         <table class="desktop">
