--- a/Odin/Views/Account/Login.cshtml
+++ b/Odin/Views/Account/Login.cshtml
@@ -3,51 +3,71 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-5">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
+
+                <div id="caption">
+                    <span>Sign in to</span><span id="Odin"> Odin</span><span> to</span><br />
+                    <span>get started</span>
+                </div>
+               
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
+                    <div class="passwd col-md-offset-2 col-md-10">
+                        <input type="submit" value="Login" class="btn btn-default text-capitalize" />
+                        <p id="forgot">@Html.ActionLink("Forgot password", "ForgotPassword")</p>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+                </div>                
             }
         </section>
+        <div id="dwellworks">
+            <img src="~/Content/Images/dwellworks_icon.png" />
+            <p>&nbsp;</p>
+            <p>Odin</p>
+        </div>
+    </div>
+    <div class="col">
+        <img src="~/Content/Images/bg_image.png"/>
+        <img id="gradient" src="~/Content/Images/bg_gradient.png" />
+        <div id="labels-box">
+            <div class="text-lables">
+                <p>We make</p>
+                <p>relocation</p>
+                <p>management</p>
+                <p>simpler.</p>
+            </div>
+            <div class="text-lables">
+                <p>Our job is to make sure those moves</p>
+                <p>are supported with personal care,</p>
+                <p>local expertise, and the highest</p>
+                <p>quality of compliance and business</p>
+                <p>services standards</p>
+            </div>
+        </div>
     </div>
 </div>
+
+@Styles.Render("~/Styling/login")
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
