--- a/Odin/Content/Login/login.css
+++ b/Odin/Content/Login/login.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+body {
   padding-top: 0px; }
 
 div.container.body-content {
@@ -28,17 +29,17 @@ div.container.body-content {
     div.container.body-content div.col div#labels-box {
       color: white;
       position: relative;
-      top: -1441px;
-      left: 108px;
-      z-index: 10; }
+      top: -1445px;
+      left: 87px; }
     div.container.body-content div.col div.text-lables:nth-child(1) {
-      line-height: 45px;
-      font-size: xx-large;
+      line-height: 62px;
+      font-family: sans-serif;
+      font-size: 50px;
       font-weight: bold; }
     div.container.body-content div.col div.text-lables:nth-child(2) {
       margin-top: 40px;
-      font-size: large;
-      line-height: 24px; }
+      font-size: 24px;
+      line-height: 30px; }
   div.container.body-content div.form-group div.col-md-10 {
     padding-left: 88px;
     padding-right: 0px; }
