--- a/Odin/Content/Login/login.scss
+++ b/Odin/Content/Login/login.scss
@@ -1,4 +1,4 @@
-﻿//@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+﻿@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 body {
     padding-top: 0px;
@@ -45,22 +45,22 @@ div.container.body-content {
         div#labels-box {
             color: white;
             position: relative;
-            top: -1441px;
-            left: 108px;
-            z-index: 10;
+            top: -1445px;
+            left: 87px;
         }
 
         div.text-lables {
             &:nth-child(1) {
-                line-height: 45px;
-                font-size: xx-large;
+                line-height: 62px;
+                font-family: sans-serif;
+                font-size: 50px;
                 font-weight: bold;
             }
 
             &:nth-child(2) {
                 margin-top: 40px;
-                font-size: large;
-                line-height: 24px;
+                font-size: 24px;
+                line-height: 30px;
             }
         }
     }
