--- a/Odin/Content/Home/home.css
+++ b/Odin/Content/Home/home.css
@@ -22,7 +22,7 @@ div#main div#caption {
       font-size: large;
       color: #4BAD48;
       font-size: 20px;
-      font-family: OpenSansRegular; }
+      font-family: sans-serif; }
 
 div#main div#icons {
   float: right;
@@ -114,7 +114,7 @@ div#main div#list {
         position: relative;
         font-size: 16px;
         text-decoration: underline;
-        font-family: OpenSansRegular; }
+        font-family: sans-serif; }
       div#main div#list td div.actlist-item-hdr:first-of-type {
         width: 22px;
         margin-top: 5px;
@@ -130,7 +130,7 @@ div#main div#list {
       width: 40px; }
     div#main div#list td div.notify-count {
       font-size: small;
-      color: darkgreen;
+      color: #31A4DD;
       position: relative;
       left: -17px;
       top: -7px;
@@ -145,15 +145,15 @@ div#main div#list {
       margin-bottom: 0px;
       font-size: 20px;
       font-weight: bold;
-      font-family: OpenSansRegular; }
+      font-family: sans-serif; }
       div#main div#list td p:first-child.actlist-item {
         color: #48AD48;
         font-size: 16px;
-        font-family: OpenSansRegular; }
+        font-family: sans-serif; }
     div#main div#list td p:nth-child(2) {
       font-size: 16px;
       line-height: 10px;
-      font-family: OpenSansLight; }
+      font-family: sans-serif; }
   div#main div#list table {
     width: 96%;
     margin: 30px 40px 0px 40px; }
@@ -182,7 +182,7 @@ div#main div#list {
     margin-left: 0px !important; }
   div#main td span {
     font-size: 14px;
-    font-family: OpenSansLightItalic; }
+    font-family: sans-serif; }
     div#main td span.tablet-column-label {
       color: #6C6E70;
       font-weight: 600;
@@ -226,7 +226,7 @@ div#main div#list {
     padding-left: 9px !important; }
   div#main td span {
     font-size: 14px;
-    font-family: OpenSansLightItalic; }
+    font-family: sans-serif; }
     div#main td span.tablet-column-label {
       color: #6C6E70;
       font-weight: 600;
@@ -260,7 +260,7 @@ div#main div#list {
     padding-left: 9px !important; }
   div#main td span {
     font-size: 14px;
-    font-family: OpenSansLightItalic; }
+    font-family: sans-serif; }
     div#main td span.tablet-column-label {
       color: #6C6E70;
       font-weight: 600;
@@ -298,7 +298,7 @@ div#main div#list {
     padding-left: 9px !important; }
   div#main td span {
     font-size: 14px;
-    font-family: OpenSansLightItalic; }
+    font-family: sans-serif; }
     div#main td span.tablet-column-label {
       color: #6C6E70;
       font-weight: 600;
