--- a/Odin/Content/Login/login.scss
+++ b/Odin/Content/Login/login.scss
@@ -1,5 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-
+﻿
 body {
     padding-top: 0px;
 }
@@ -116,6 +115,7 @@ div.container.body-content {
                 margin-left: 4px;
                 top: -2px;
                 height: 21px;
+                position: relative;
             }
 
             &:last-of-type {
@@ -123,7 +123,7 @@ div.container.body-content {
                 font-size: large;
                 color: #4BAD48;
                 font-size: 20px;
-                font-family: OpenSansRegular;
+                font-family: sans-serif;
             }
         }
     }
