--- a/Odin/Content/Login/login.scss
+++ b/Odin/Content/Login/login.scss
@@ -6,8 +6,17 @@ body {
 div.container.body-content {
     width: auto;
 
+    div.row {
+        height: 820px;
+        overflow: hidden;
+    }
+
     div.col-md-5 {
         margin-top: 32px;
+
+        @media screen and (max-width: 992px) {
+            padding-right: 102px;
+        }
 
         div#caption {
             line-height: 44px;
@@ -25,6 +34,10 @@ div.container.body-content {
     div.col {
         width: 50%;
         display: inline-block;
+
+        @media screen and (max-width: 992px) {
+            display: none;
+        }
 
         p {
             margin: 0px;
