--- a/Odin/Content/Login/login.css
+++ b/Odin/Content/Login/login.css
@@ -2,25 +2,31 @@
   padding-top: 0px; }
 
 div.container.body-content {
-  width: auto; }
+  width: auto;
+  padding-right: 0px; }
   div.container.body-content div.row {
-    height: 820px;
+    margin: 0px;
+    height: 886px;
+    max-width: 100%;
+    max-height: 100%;
     overflow: hidden; }
-  div.container.body-content div.col-md-5 {
+  div.container.body-content div.col-md-4 {
+    height: 852px;
     margin-top: 32px; }
     @media screen and (max-width: 992px) {
-      div.container.body-content div.col-md-5 {
-        padding-right: 102px; } }
-    div.container.body-content div.col-md-5 div#caption {
+      div.container.body-content div.col-md-4 {
+        padding-right: 120px; } }
+    div.container.body-content div.col-md-4 div#caption {
       line-height: 44px;
       padding-top: 60px;
       font-size: xx-large;
       text-align: center;
       margin-bottom: 97px; }
-      div.container.body-content div.col-md-5 div#caption span#Odin {
+      div.container.body-content div.col-md-4 div#caption span#Odin {
         color: green; }
   div.container.body-content div.col {
-    width: 50%;
+    width: 66%;
+    position: relative;
     display: inline-block; }
     @media screen and (max-width: 992px) {
       div.container.body-content div.col {
@@ -28,17 +34,17 @@ div.container.body-content {
     div.container.body-content div.col p {
       margin: 0px; }
     div.container.body-content div.col img {
-      width: 613px;
+      width: 1230px;
       opacity: 0.5; }
       div.container.body-content div.col img:nth-child(2) {
-        top: -836px;
+        top: 0px;
         opacity: 0.7;
-        position: relative; }
+        position: fixed; }
     div.container.body-content div.col div#labels-box {
       color: white;
-      position: relative;
-      top: -1445px;
-      left: 87px; }
+      position: absolute;
+      top: 150px;
+      left: 186px; }
     div.container.body-content div.col div.text-lables:nth-child(1) {
       line-height: 62px;
       font-family: sans-serif;
@@ -73,7 +79,7 @@ div.container.body-content {
   div.container.body-content p#forgot {
     text-align: center; }
   div.container.body-content div#dwellworks {
-    margin-top: 152px;
+    margin-top: 196px;
     text-align: center; }
     div.container.body-content div#dwellworks p {
       display: inline-block; }
