--- a/Odin/Content/Login/login.scss
+++ b/Odin/Content/Login/login.scss
@@ -5,17 +5,22 @@ body {
 
 div.container.body-content {
     width: auto;
+    padding-right: 0px;
 
     div.row {
-        height: 820px;
+        margin: 0px;
+        height: 886px;
+        max-width: 100%;
+        max-height: 100%;
         overflow: hidden;
     }
 
-    div.col-md-5 {
+    div.col-md-4 {
+        height: 852px;
         margin-top: 32px;
 
         @media screen and (max-width: 992px) {
-            padding-right: 102px;
+            padding-right: 120px;
         }
 
         div#caption {
@@ -32,7 +37,8 @@ div.container.body-content {
     }
 
     div.col {
-        width: 50%;
+        width: 66%;
+        position: relative;
         display: inline-block;
 
         @media screen and (max-width: 992px) {
@@ -44,21 +50,21 @@ div.container.body-content {
         }
 
         img {
-            width: 613px;
+            width: 1230px;
             opacity: 0.5;
 
             &:nth-child(2) {
-                top: -836px;
+                top: 0px;
                 opacity: 0.7;
-                position: relative;
+                position: fixed;
             }
         }
 
         div#labels-box {
             color: white;
-            position: relative;
-            top: -1445px;
-            left: 87px;
+            position: absolute;
+            top: 150px;
+            left: 186px;
         }
 
         div.text-lables {
@@ -117,7 +123,7 @@ div.container.body-content {
     }
 
     div#dwellworks {
-        margin-top: 152px;
+        margin-top: 196px;
         text-align: center;
 
         p {
