Forgot password screen, small tweaks on login styling, home references removed

--- a/Odin/Content/ForgotPassword/forgotpassword.scss
+++ b/Odin/Content/ForgotPassword/forgotpassword.scss
@@ -1,18 +1,129 @@
 ﻿
 body {
     padding-top: 0px;
+
+    img.bg {
+        width: 100%;
+        height: 950px;
+        opacity: 0.5;
+
+        @media screen and (max-width: 610px) {
+            display: none;
+        }
+
+        &:nth-child(2) {
+            top: 0px;
+            left: 0px;
+            opacity: 0.7;
+            position: fixed;
+        }
+    }
 }
 
 div.container.body-content {
+    top: 0px;
+    width: 100%;
     padding: 0px;
+    position: fixed;
 
     div.col {
-        width: 100%;
+        width: 626px;
+        margin: auto;
+        text-align: center;
+        padding-top: 5px;
+        margin-top: 80px;
+        padding-bottom: 12px;
+        background-color: white;
 
+        @media screen and (max-width: 610px) {
+            margin-top: 20px;
+        }
+
+        div#group-blk {
+            width: 60%;
+            margin: auto;
+            padding-top: 45px;
+            text-align: center;
+
+            p, span {
+                color: #31A4DD;
+            }
+
+            div.form-group {
+                padding-left: 15px;
+                padding-right: 15px;
+
+                label {
+                    padding-top: 0px;
+                    padding-left: 0px;
+                    font-family: sans-serif;
+                    font-size: initial;
+                    text-align: left;
+                    float: left;
+                }
+
+                div.col-md-10 {
+                    padding-left: 0;
+                    font-size: 14px;
+                }
+
+                &:first-of-type {
+                    div.col-md-10 {
+                        width: 100%;
+
+                        input {
+                            max-width: none;
+                        }
+                    }
+                }
+
+                &:last-of-type {
+                    margin-top: 34px;
+
+                    div.col-md-10 {
+                        margin-left: 0px;
+                        padding-right: 0px;
+
+                        input {
+                            width: 116px;
+                            float: left;
+                            line-height: 18px;
+                            box-shadow: none;
+                            background-color: #4BAD48;
+                            color: white;
+                            margin-right: 10px;
+                        }
+
+                        span {
+                            vertical-align: middle;
+                        }
+                    }
+
+                    div#desc {
+                        margin-top: 80px;
+                        font-family: sans-serif;
+                        font-size: 16px;
+                        text-align: left;
+                        line-height: 21px;
+                    }
+                }
+            }
+        }
+
+        div#caption {
+            margin-top: 72px;
+            font-size: 36px;
+            line-height: 50px;
+            font-family: sans-serif;
+
+            span#email {
+                color: #31A4DD;
+            }
+        }
     }
 
     div#dwellworks {
-        margin-top: 152px;
+        margin-top: 178px;
         text-align: center;
 
         p {
