--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -1,28 +1,51 @@
 ﻿@model Odin.ViewModels.Authentication.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
+    Layout = "~/Views/Shared/_ForgotPassword.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="row">
+    <div class="col">
+        @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            <div id="caption">
+                <span>Confirm your</span><span id="email"> Email</span><br />
+                <span>to Reset Your Password</span>
+            </div>
+
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+
+            <div id="group-blk">
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Send" class="btn btn-default text-capitalize" /><span>Send a test email to me now!</span>
+                    </div>
+                    <br />
+                    <div id="desc">
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi.</p>
+                    </div>
+                </div>
+            </div>
+        }
+
+        <div id="dwellworks">
+            <img src="~/Content/Images/dwellworks_icon.png" />
+            <p>&nbsp;</p>
+            <p>Odin</p>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
-}
+</div>
+
+
+@Styles.Render("~/Styling/forgotpw")
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
