--- a/Odin/Content/ForgotPassword/forgotpassword.css
+++ b/Odin/Content/ForgotPassword/forgotpassword.css
@@ -1,12 +1,88 @@
 ﻿body {
   padding-top: 0px; }
+  body img.bg {
+    width: 100%;
+    height: 950px;
+    opacity: 0.5; }
+    @media screen and (max-width: 610px) {
+      body img.bg {
+        display: none; } }
+    body img.bg:nth-child(2) {
+      top: 0px;
+      left: 0px;
+      opacity: 0.7;
+      position: fixed; }
 
 div.container.body-content {
-  padding: 0px; }
+  top: 0px;
+  width: 100%;
+  padding: 0px;
+  position: fixed; }
   div.container.body-content div.col {
-    width: 100%; }
+    width: 626px;
+    margin: auto;
+    text-align: center;
+    padding-top: 5px;
+    margin-top: 80px;
+    padding-bottom: 12px;
+    background-color: white; }
+    @media screen and (max-width: 610px) {
+      div.container.body-content div.col {
+        margin-top: 20px; } }
+    div.container.body-content div.col div#group-blk {
+      width: 60%;
+      margin: auto;
+      padding-top: 45px;
+      text-align: center; }
+      div.container.body-content div.col div#group-blk p, div.container.body-content div.col div#group-blk span {
+        color: #31A4DD; }
+      div.container.body-content div.col div#group-blk div.form-group {
+        padding-left: 15px;
+        padding-right: 15px; }
+        div.container.body-content div.col div#group-blk div.form-group label {
+          padding-top: 0px;
+          padding-left: 0px;
+          font-family: sans-serif;
+          font-size: initial;
+          text-align: left;
+          float: left; }
+        div.container.body-content div.col div#group-blk div.form-group div.col-md-10 {
+          padding-left: 0;
+          font-size: 14px; }
+        div.container.body-content div.col div#group-blk div.form-group:first-of-type div.col-md-10 {
+          width: 100%; }
+          div.container.body-content div.col div#group-blk div.form-group:first-of-type div.col-md-10 input {
+            max-width: none; }
+        div.container.body-content div.col div#group-blk div.form-group:last-of-type {
+          margin-top: 34px; }
+          div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10 {
+            margin-left: 0px;
+            padding-right: 0px; }
+            div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10 input {
+              width: 116px;
+              float: left;
+              line-height: 18px;
+              box-shadow: none;
+              background-color: #4BAD48;
+              color: white;
+              margin-right: 10px; }
+            div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10 span {
+              vertical-align: middle; }
+          div.container.body-content div.col div#group-blk div.form-group:last-of-type div#desc {
+            margin-top: 80px;
+            font-family: sans-serif;
+            font-size: 16px;
+            text-align: left;
+            line-height: 21px; }
+    div.container.body-content div.col div#caption {
+      margin-top: 72px;
+      font-size: 36px;
+      line-height: 50px;
+      font-family: sans-serif; }
+      div.container.body-content div.col div#caption span#email {
+        color: #31A4DD; }
   div.container.body-content div#dwellworks {
-    margin-top: 152px;
+    margin-top: 178px;
     text-align: center; }
     div.container.body-content div#dwellworks p {
       display: inline-block; }
