Reset password screen complete

--- a/Odin/Content/ForgotPassword/forgotpassword.scss
+++ b/Odin/Content/ForgotPassword/forgotpassword.scss
@@ -65,16 +65,16 @@ div.container.body-content {
                 div.col-md-10 {
                     padding-left: 0;
                     font-size: 14px;
+                    width: 100%;
+
+                    input {
+                        max-width: none;
+                    }
                 }
 
-                &:first-of-type {
-                    div.col-md-10 {
-                        width: 100%;
-
-                        input {
-                            max-width: none;
-                        }
-                    }
+                &:nth-child(3) {
+                    padding-top: 96px;
+                    padding-left: 40%;
                 }
 
                 &:last-of-type {
@@ -92,9 +92,11 @@ div.container.body-content {
                             background-color: #4BAD48;
                             color: white;
                             margin-right: 10px;
+                            text-transform: capitalize;
                         }
 
                         span {
+                            float: left;
                             vertical-align: middle;
                         }
                     }
@@ -116,7 +118,7 @@ div.container.body-content {
             line-height: 50px;
             font-family: sans-serif;
 
-            span#email {
+            span#email, span#pw {
                 color: #31A4DD;
             }
         }
