--- a/Odin/Content/Login/login.scss
+++ b/Odin/Content/Login/login.scss
@@ -118,6 +118,7 @@ div.container.body-content {
                 margin-bottom: 5px;
                 line-height: 10px;
                 background-color: #48AD48;
+                text-transform: capitalize;
             }
         }
     }
