--- a/Odin/Views/Account/Login.cshtml
+++ b/Odin/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
 
                 <div class="form-group">
                     <div class="passwd col-md-offset-2 col-md-10">
-                        <input type="submit" value="Login" class="btn btn-default text-capitalize" />
+                        <input type="submit" value="Login" class="btn btn-default" />
                         <p id="forgot">@Html.ActionLink("Forgot password", "ForgotPassword")</p>
                     </div>
                 </div>                
