--- a/Odin/Content/ForgotPassword/forgotpassword.css
+++ b/Odin/Content/ForgotPassword/forgotpassword.css
@@ -48,11 +48,13 @@ div.container.body-content {
           float: left; }
         div.container.body-content div.col div#group-blk div.form-group div.col-md-10 {
           padding-left: 0;
-          font-size: 14px; }
-        div.container.body-content div.col div#group-blk div.form-group:first-of-type div.col-md-10 {
+          font-size: 14px;
           width: 100%; }
-          div.container.body-content div.col div#group-blk div.form-group:first-of-type div.col-md-10 input {
+          div.container.body-content div.col div#group-blk div.form-group div.col-md-10 input {
             max-width: none; }
+        div.container.body-content div.col div#group-blk div.form-group:nth-child(3) {
+          padding-top: 96px;
+          padding-left: 40%; }
         div.container.body-content div.col div#group-blk div.form-group:last-of-type {
           margin-top: 34px; }
           div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10 {
@@ -65,8 +67,10 @@ div.container.body-content {
               box-shadow: none;
               background-color: #4BAD48;
               color: white;
-              margin-right: 10px; }
+              margin-right: 10px;
+              text-transform: capitalize; }
             div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10 span {
+              float: left;
               vertical-align: middle; }
           div.container.body-content div.col div#group-blk div.form-group:last-of-type div#desc {
             margin-top: 80px;
@@ -79,7 +83,7 @@ div.container.body-content {
       font-size: 36px;
       line-height: 50px;
       font-family: sans-serif; }
-      div.container.body-content div.col div#caption span#email {
+      div.container.body-content div.col div#caption span#email, div.container.body-content div.col div#caption span#pw {
         color: #31A4DD; }
   div.container.body-content div#dwellworks {
     margin-top: 178px;
