--- a/Odin/Content/Login/login.css
+++ b/Odin/Content/Login/login.css
@@ -77,7 +77,8 @@ div.container.body-content {
       box-shadow: none;
       margin-bottom: 5px;
       line-height: 10px;
-      background-color: #48AD48; }
+      background-color: #48AD48;
+      text-transform: capitalize; }
   div.container.body-content p#forgot {
     text-align: center; }
   div.container.body-content div#dwellworks {
