Create Password form complete

--- a/Odin/Views/Account/ResetPassword.cshtml
+++ b/Odin/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Odin.ViewModels.Authentication.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Set/Reset password";
+    ViewBag.Title = "Reset";
     Layout = "~/Views/Shared/_ForgotPassword.cshtml";
 }
 
@@ -11,7 +11,7 @@
             @Html.AntiForgeryToken()
 
             <div id="caption">
-                <span>Reset your</span><span id="pw"> Password</span>
+                <span>@ViewBag.Title your</span><span id="pw"> Password</span>
             </div>
 
             @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -49,7 +49,6 @@
         </div>
     </div>
 </div>
-
 
 @Styles.Render("~/Styling/forgotpw")
 
