--- a/Odin/Views/Account/CreatePassword.cshtml
+++ b/Odin/Views/Account/CreatePassword.cshtml
@@ -1,43 +1,56 @@
 ﻿@model Odin.ViewModels.Authentication.CreatePasswordViewModel
-
 @{
-    ViewBag.Title = "Set password";
+    ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_ForgotPassword.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="row">
+    <div class="col">
+        @using (Html.BeginForm("CreatePassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm("CreatePassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Set your password.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Code)
-    @Html.HiddenFor(model => model.UserId, (string)ViewBag.UserId)
-    @*<div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>*@
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            <div id="caption">
+                <span>@ViewBag.Title your</span><span id="pw"> Password</span>
+            </div>
+
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Code)
+            @Html.HiddenFor(model => model.UserId, (string)ViewBag.UserId)
+
+            <div id="group-blk">
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+                        @Html.LabelFor(m => m.Password, new { @class = "col-md-10 control-label" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-10 control-label" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10">
+                        <input type="submit" value="Reset" class="btn btn-default" />
+                    </div>
+                    <br />
+                </div>
+            </div>
+        }
+
+        <div id="dwellworks">
+            <img src="~/Content/Images/dwellworks_icon.png" />
+            <p>&nbsp;</p>
+            <p>Odin</p>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
-        </div>
-    </div>
-}
+</div>
+
+@Styles.Render("~/Styling/forgotpw")
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
