Create/Reset Password emailers complete

--- a/Odin/Content/ForgotPassword/forgotpassword.css
+++ b/Odin/Content/ForgotPassword/forgotpassword.css
@@ -26,6 +26,12 @@ div.container.body-content {
     margin-top: 80px;
     padding-bottom: 12px;
     background-color: white; }
+    div.container.body-content div.col.mailer {
+      border: 1px solid; }
+      @media screen and (max-width: 610px) {
+        div.container.body-content div.col.mailer {
+          width: auto;
+          border: none; } }
     @media screen and (max-width: 610px) {
       div.container.body-content div.col {
         margin-top: 20px; } }
@@ -34,6 +40,8 @@ div.container.body-content {
       margin: auto;
       padding-top: 45px;
       text-align: center; }
+      div.container.body-content div.col div#group-blk.mailer {
+        padding-top: 0px; }
       div.container.body-content div.col div#group-blk p, div.container.body-content div.col div#group-blk span {
         color: #31A4DD; }
       div.container.body-content div.col div#group-blk div.form-group {
@@ -60,6 +68,18 @@ div.container.body-content {
           div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10 {
             margin-left: 0px;
             padding-right: 0px; }
+            div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10.mailer {
+              margin-top: 110px;
+              line-height: 10px;
+              font-weight: 500; }
+            div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10 a {
+              box-shadow: none;
+              background-color: #4BAD48;
+              color: white;
+              width: 200px;
+              margin-top: 40px;
+              line-height: 20px;
+              text-transform: capitalize; }
             div.container.body-content div.col div#group-blk div.form-group:last-of-type div.col-md-10 input {
               width: 116px;
               float: left;
@@ -83,11 +103,19 @@ div.container.body-content {
       font-size: 36px;
       line-height: 50px;
       font-family: sans-serif; }
+      div.container.body-content div.col div#caption div.mailer {
+        width: 344px;
+        margin: auto;
+        font-size: initial;
+        line-height: 22px;
+        margin-top: 14px; }
       div.container.body-content div.col div#caption span#email, div.container.body-content div.col div#caption span#pw {
         color: #31A4DD; }
   div.container.body-content div#dwellworks {
     margin-top: 178px;
     text-align: center; }
+    div.container.body-content div#dwellworks.mailer {
+      margin-top: 40px; }
     div.container.body-content div#dwellworks p {
       display: inline-block; }
       div.container.body-content div#dwellworks p:first-of-type {
