--- a/Odin/Content/ForgotPassword/forgotpassword.scss
+++ b/Odin/Content/ForgotPassword/forgotpassword.scss
@@ -35,6 +35,15 @@ div.container.body-content {
         padding-bottom: 12px;
         background-color: white;
 
+        &.mailer {
+            border: 1px solid;
+
+            @media screen and (max-width: 610px) {
+                width: auto;
+                border: none;
+            }
+        }
+
         @media screen and (max-width: 610px) {
             margin-top: 20px;
         }
@@ -44,6 +53,10 @@ div.container.body-content {
             margin: auto;
             padding-top: 45px;
             text-align: center;
+
+            &.mailer {
+                padding-top: 0px;
+            }
 
             p, span {
                 color: #31A4DD;
@@ -84,6 +97,22 @@ div.container.body-content {
                         margin-left: 0px;
                         padding-right: 0px;
 
+                        &.mailer {
+                            margin-top: 110px;
+                            line-height: 10px;
+                            font-weight: 500;
+                        }
+
+                        a {
+                            box-shadow: none;
+                            background-color: #4BAD48;
+                            color: white;
+                            width: 200px;
+                            margin-top: 40px;
+                            line-height: 20px;
+                            text-transform: capitalize;
+                        }
+
                         input {
                             width: 116px;
                             float: left;
@@ -118,6 +147,14 @@ div.container.body-content {
             line-height: 50px;
             font-family: sans-serif;
 
+            div.mailer {
+                width: 344px;
+                margin: auto;
+                font-size: initial;
+                line-height: 22px;
+                margin-top: 14px;
+            }
+
             span#email, span#pw {
                 color: #31A4DD;
             }
@@ -127,6 +164,10 @@ div.container.body-content {
     div#dwellworks {
         margin-top: 178px;
         text-align: center;
+
+        &.mailer {
+            margin-top: 40px;
+        }
 
         p {
             display: inline-block;
