--- a/Odin/Views/Mailers/ResetPassword.cshtml
+++ b/Odin/Views/Mailers/ResetPassword.cshtml
@@ -4,8 +4,43 @@
 <head>
     <title></title>
 </head>
-<body>
-    <H2>Hello @Model.Name</H2>
-    <P>Click <a clicktracking="off" href=@Model.Link>here</a> to create a password for your Dwellworks account.</P>
+<body> 
+    <div class="row">
+        <div class="col mailer">
+
+            <div id="dwellworks" class="mailer">
+                <img src="~/Content/Images/dwellworks_icon.png" />
+                <p>&nbsp;</p>
+                <p>Odin</p>
+            </div>
+
+            @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+
+                 <div id="caption">
+                    <span>Reset your</span><span id="pw"> Password</span>
+                     <div class="mailer">
+                         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi.</p>
+                     </div>
+                </div>
+
+                <div id="group-blk" class="mailer">
+                    <div class="form-group">
+                        <div class="col-md-10">
+                            <a clicktracking="off" class="btn btn-default" href=@Model.Link>Reset Password</a>
+                        </div>
+
+                        <div class="col-md-10 mailer">
+                            <p>&copy; 2017 Dwellworks, LLC. All Rights Reserved.</p>
+                            <p>Privacy Policy | Code of Conduct</p>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
 </body>
 </html>
+
+@Styles.Render("~/Styling/forgotpw")
